[package]
name = "kiss-ftpd"
version = "1.0.0"
authors = ["moparisthebest <admin@moparisthebest.com>"]
edition = "2018"

description = "FTP server that Keeps It Simple, Stupid"
repository  = "https://code.moparisthebest.com/moparisthebest/kiss-ftpd"
keywords    = ["ftp", "file", "kiss"]

license = "AGPL-3.0-or-later"
readme = "README.md"

include = [
  "**/*.rs",
  "Cargo.toml",
  "*.md",
]

[dependencies]
libunftp = "0.18"
unftp-sbe-fs = "0.2"
tokio = { version = "1", features = ["rt"] }
env_logger = { version = "0.9", optional = true, features = [] }

[features]
default = ["env_logger"]

[profile.release]
debug-assertions = false
overflow-checks = false
opt-level = 3
panic = "abort"
incremental = true
codegen-units = 1
strip = true
lto = true
